--- a/site/src/views/partials/head.ejs
+++ b/site/src/views/partials/head.ejs
@@ -7,14 +7,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Devonshire&display=swap" rel="stylesheet">
     <!-- Hojas de estilo -->
-    <link rel="stylesheet" type="text/css" href="./styles/login.css">
-    <link rel="stylesheet" type="text/css" href="./styles/registro.css">
-    <link rel="stylesheet" type="text/css" href="./styles/footer.css">
-    <link rel="stylesheet" type="text/css" href="./styles/home.css">
+    <link rel="stylesheet" type="text/css" href="/styles/login.css">
+    <link rel="stylesheet" type="text/css" href="/styles/registro.css">
+    <link rel="stylesheet" type="text/css" href="/styles/footer.css">
+    <link rel="stylesheet" type="text/css" href="/styles/home.css">
 
 <!--     averiguar como arreglar este bug de los stylos, no te los agarra cuando usas rutas -->
-<link rel="stylesheet" type="text/css" href="./../styles/login.css">
-<link rel="stylesheet" type="text/css" href="./../styles/registro.css">
-<link rel="stylesheet" type="text/css" href="./../styles/footer.css">
-<link rel="stylesheet" type="text/css" href="../../styles/home.css">
+<link rel="stylesheet" type="text/css" href="/styles/login.css">
+<link rel="stylesheet" type="text/css" href="/styles/registro.css">
+<link rel="stylesheet" type="text/css" href="/styles/footer.css">
+<link rel="stylesheet" type="text/css" href="/styles/home.css">
 </head>
