--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -3,12 +3,12 @@
         Hola <%= locals.userLogged.name %> 
     <% } %>
     </div>
-    <div id="menu" class="centrar-hijos-vertical-horizontal"><img class="icono" src="../../../img/menu-icon.svg"></div>
+    <div id="menu" class="centrar-hijos-vertical-horizontal"><img class="icono" src="/img/menu-icon.svg"></div>
     <a href="/"><div id="espacio-logo"><span id="logo">Marketfy</span></div></a>
     <div id="carrito">
         <div class="total-carrito"> $120.322</div>
         <div>
-            <img class="icono" src="../../../img/shoppingcart-icon.svg">
+            <img class="icono" src="/img/shoppingcart-icon.svg">
         </div>
         <div class="circulo-rojo centrar-hijos-vertical-horizontal">
             <div class="inline-block blanco-negrita">22</div>
