--- a/site/public/styles/home_new.css
+++ b/site/public/styles/home_new.css
@@ -1,23 +1,70 @@
 
+
+/* NavBar */
+nav { 
+    background: #222; 
+    padding: 5px 20px; 
+} 
+ul { 
+    list-style-type: none; 
+} 
+a { 
+    color: white; 
+    text-decoration: none; 
+} 
+a:hover { 
+    text-decoration: underline; 
+} 
+.logo a:hover { 
+    text-decoration: none; 
+} 
+.menu li { 
+    font-size: 16px; 
+    padding: 15px 5px; 
+    white-space: nowrap; 
+} 
+.logo a, .toggle a { 
+    font-size: 20px; 
+} 
+.button.secondary { 
+    border-bottom: 1px #444 solid; 
+}
+/* Fin NavBar */
+
+#header-top{
+    margin: auto;
+}
+
+/* Inicio Header Categorias */
+#categorias{
+    margin: auto;
+    width: 1440px;
+}
+.categorias{
+    justify-content:space-between;
+}
+/* Fin Header Categorias */
+
+/*Inicio Estilo para el buscador */
+#search {
+    margin: auto;
+    width: auto;
+}
+/*Fin Estilo para el buscador */
+
 /* Version Mobil Portrait */
 @media (max-width: 500px) and (orientation: portrait) {
-    body {
-        background-color:yellow;
-    }
+    
 };
 
 /* Version Mobil Landscapet */
 @media (min-width: 577px) {
-    body {
-        background-color: blue;
-    }
+    
 }
 
 /* Version Tablet Landscapet */
 @media (min-width: 769px) {
-    body {
-        background-color: green;
-    }
+   
 }
 
 /* Version Desktop Landscapet */
@@ -26,16 +73,11 @@
         margin:auto;
     }
     .producto-contenedor{
-        width: 230px;
-        min-width: 230px;
+        min-width: 200px;
         margin-right:10px;
-    }
-    header{
-        width: 100%;
     }
     .container {
         margin:auto;
         width: 1440px;
-        background-color: blue;
     }
 };
