--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -1,12 +1,21 @@
 <div id="header-top">
-    <div><% if (locals.userLogged) { %>
+    <!--<div><% if (locals.userLogged) { %>
         Hola <%= locals.userLogged.name %> 
-    <% } %>
+    <% } %> 
+    </div> -->
+    <div id="menu" class="centrar-hijos-vertical-horizontal">
+        <img class="icono" src="/img/menu-icon.svg">
     </div>
-    <div id="menu" class="centrar-hijos-vertical-horizontal"><img class="icono" src="/img/menu-icon.svg"></div>
-    <a href="/"><div id="espacio-logo"><span id="logo">Marketfy</span></div></a>
+        <a href="/">
+            <div id="espacio-logo">
+                <span id="logo">Marketfy</span>
+            </div>
+        </a>
+        <div><%- include('searcher') %></div>
     <div id="carrito">
-        <div class="total-carrito"> $120.322</div>
+        <div class="total-carrito">
+            $120.322
+        </div>
         <div>
             <img class="icono" src="/img/shoppingcart-icon.svg">
         </div>
