--- a/site/src/views/partials/searcher.ejs
+++ b/site/src/views/partials/searcher.ejs
@@ -1,8 +1,8 @@
-<div id="header-bottom">
+<div id="search">
     <!--Inicio <barraBuscar> -->
         <div class="buscador">
             <input type="text">
-            <div class="icono">🔎</div>
+                <div class="icono">🔎</div>
         </div>
     <!--Fin </barraBuscar> -->
 </div>
