--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -3,9 +3,9 @@
         Hola <%= locals.userLogged.name %> 
     <% } %> 
     </div> -->
-    <div id="menu" class="centrar-hijos-vertical-horizontal">
+    <!--<div id="menu" class="centrar-hijos-vertical-horizontal">
         <img class="icono" src="/img/menu-icon.svg">
-    </div>
+    </div>-->
         <a href="/">
             <div id="espacio-logo">
                 <span id="logo">Marketfy</span>
