--- a/site/public/styles/home.css
+++ b/site/public/styles/home.css
@@ -56,10 +56,7 @@ body {
 }
 header {
     width: 100%;
-    padding:0rem .25rem 0.25rem .25rem;
-
 }
-
 .inline-block{
     display: inline-block;
 }
@@ -72,6 +69,7 @@ header {
     font-family: 'Devonshire', regular;
     font-size: 2.5rem;
     color:#FFF131;
+    text-decoration: none;
 }
 
 .icono{
@@ -80,14 +78,7 @@ header {
 
 
 #header-top{
-    /*width: var(--default-width);*/
-    height: 7rem;
-    display:flex;
-    justify-content:space-between;
-    align-items: center;
-    padding-right: var(--default-padding);
-    padding-left: var(--default-padding);
-    margin-bottom: 15px;
+    
 }
 #header-top > a {
     text-decoration: none;
