Correxión maximo Width Menú

--- a/site/public/styles/home_new.css
+++ b/site/public/styles/home_new.css
@@ -3,7 +3,7 @@
 /* NavBar */
 
 .categoria_desktop {
-    width: var(--default-width);
+    max-width: var(--default-width);
     margin: auto;
 }
 
