--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -18,7 +18,7 @@
                 </div>
                 <div class="catalogo-contenedor">
                     <% products.forEach(product => { %>
-                    <div class="producto-contenedor">
+                    <div class="producto-contenedor margen-derecho">
                         <div class="producto-contenedor-secundario">
                             <div class="producto-header">
                                 <div class="producto-descuento"><%= product.descuento%>
