--- a/site/src/views/partials/head.ejs
+++ b/site/src/views/partials/head.ejs
@@ -13,5 +13,6 @@
     <link rel="stylesheet" type="text/css" href="/styles/home.css">
     <link rel="stylesheet" type="text/css" href="/styles/home_new.css">
     <link rel="stylesheet" type="text/css" href="/styles/icons.css">
+    <link rel="stylesheet" type="text/css" href="/styles/new_css_otros.css">
     <script src="/js/icons.js"></script>
 </head>
