--- a/site/src/views/categories/productsSubCategory.ejs
+++ b/site/src/views/categories/productsSubCategory.ejs
@@ -8,34 +8,65 @@
         <%- include('../partials/searcher') %>
     </header>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="titulo-subcategoria"><%- categoryName %> / <%- subCategoryName %></div>
     <div class="subcategoria-container">
         <% products.forEach(product => { %>
+
             <div class="producto-contenedor">
                 <div class="producto-contenedor-secundario">
                     <div class="producto-header">
-                        <div class="producto-descuento"><%= product.discount%>%
+                        <div class="producto-descuento"><%= product.discoun%>
                         </div>
-                        <div class="producto-favorito">&#9829
+                        <div class="producto-favorito"><!--<i class="fas fa-heart">--><i class="far fa-heart"></i>
                         </div>
                     </div>
                     <div class="producto-imagen">
-                        <img src= "<%= product.image%>.png" loading="lazy" >
+                        <img src= "<%= product.image%>.png" >
                     </div>
                     <div class="producto-footer">
-                        <p class="producto-detalle"> <%= product.brand%> </p>
-                    </div>
-                    <div class="producto-footer">
-                        <p class="producto-detalle"> <%= product.description%> </p>
-                    </div>
-                    <p class="producto-presentacion"> x <%= product.display%></p>
-                    <div class="producto-precios">
-                        <p class="precio-competencia"> <%= product.precioCompetencia%> </p>
-                        <p class="precio-nuestro"> <%= product.price%> </p>
+                        <div class="producto-titulo">
+                            <p class="producto-detalle"> <%= product.brand%><%= product.description%>
+                            <span class="producto-presentacion"> x <%= product.display%></span>
+                            </p>
+                        </div>
+                        <div class="producto-precios">
+                            <span class="precio-nuestro"> <%= product.price%>
+                            <span class="precio-competencia"> <%= product.precioCompetencia%> </span>
+                            </span>
+                        </div>
+                        <div class="boton-agregar">Agregar</div>
                     </div>
                 </div>
-                <div class="producto-agregar">Agregar</div>
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             <% });%>
     </div>
 
