--- a/site/src/views/categories/productsSubCategory.ejs
+++ b/site/src/views/categories/productsSubCategory.ejs
@@ -30,7 +30,7 @@
             <div class="producto-contenedor">
                 <div class="producto-contenedor-secundario">
                     <div class="producto-header">
-                        <div class="producto-descuento"><%= product.discoun%>
+                        <div class="producto-descuento"><%= product.discount%>
                         </div>
                         <div class="producto-favorito"><!--<i class="fas fa-heart">--><i class="far fa-heart"></i>
                         </div>
@@ -46,7 +46,7 @@
                         </div>
                         <div class="producto-precios">
                             <span class="precio-nuestro"> <%= product.price%>
-                            <span class="precio-competencia"> <%= product.precioCompetencia%> </span>
+                            <span class="precio-competencia"> <%= product.competitorPrice%> </span>
                             </span>
                         </div>
                         <div class="boton-agregar">Agregar</div>
