--- a/site/src/views/partials/categoriesCarousel.ejs
+++ b/site/src/views/partials/categoriesCarousel.ejs
@@ -1,7 +1,7 @@
 <div id="categorias">
     <div class="categorias">
         <div class="categoria">
-            <a href="">
+            <a href="/usuario/mis-pedidos">
                 <div class="imagen-categoria">
                     <img src= "/img/groceries.png"> 
                 </div>
