--- a/site/src/views/partials/searcher.ejs
+++ b/site/src/views/partials/searcher.ejs
@@ -2,7 +2,7 @@
     <!--Inicio <barraBuscar> -->
         <div class="buscador">
             <input type="text">
-                <div class="icono">🔎</div>
+                <div class="icono"><i class="fas fa-search"></i></div>
         </div>
     <!--Fin </barraBuscar> -->
 </div>
