My orders + My orders Details

--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -20,8 +20,9 @@
                 <img class="icono" src="/img/shoppingcart-icon.svg">
             </div>
             <div class="circulo-rojo centrar-hijos-vertical-horizontal">
-                <div class="inline-block blanco-negrita">22</div>
+                <div id="cart-elements" class="inline-block blanco-negrita">22</div>
             </div>
         </div>
+        <script type="text/javascript" src="/js/cart.js"></script>
     </div>
 </div>
