Ok total Carrito + cantidad de items

--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -14,13 +14,11 @@
             
             <div><%- include('searcher') %></div>
         <div id="carrito">
-            <div class="total-carrito">
-                $120.322
-            </div>
+            <div id="cart-amount" class="total-carrito"></div>
             <div><i class="fas fa-shopping-cart"></i>
             </div>
             <div class="circulo-rojo centrar-hijos-vertical-horizontal">
-                <div id="cart-elements" class="inline-block blanco-negrita">22</div>
+                <div id="cart-elements" class="inline-block blanco-negrita"></div>
             </div>
         </div>
         <script type="text/javascript" src="/js/cart.js"></script>
