Index, desde base de datos y productos por categoria

--- a/site/src/views/partials/categoriesCarouselDesktop.ejs
+++ b/site/src/views/partials/categoriesCarouselDesktop.ejs
@@ -1,7 +1,7 @@
 <div class="categoria_desktop">
     <nav class="menu-main">
         <% locals.categories.forEach(category => { %>
-            <a href="/categorias/<%=category.ruta%>"><%= category.nombreCategoria%></a>
+            <a href="/categorias/<%=category.path%>"><%= category.category%></a>
         <% });%>
             <a class="menu-inicio-2" href="#">Iniciar sesión<i class="fas fa-user"></i></a>
     </nav>
