--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -13,34 +13,32 @@
             <% categories.forEach(category => { %>
             <div id="catalogo-categoria">
                 <div class="catalogo-header">
-                    <div class="catalogo-header-titulo"><%= category.nombreCategoria%></div>
-                    <a class="catalogo-header-vertodo" href="/categorias/<%=category.ruta%>"><div class="">Ver todo ></div></a>
+                    <div class="catalogo-header-titulo"><%= category.category%></div>
+                    <a class="catalogo-header-vertodo" href="/categorias/<%=category.path%>"><div class="">Ver todo ></div></a>
                 </div>
                 <div class="catalogo-contenedor">
-                    <% products.forEach(product => { %>
+                    <% category.products.forEach(product => { %>
                     <div class="producto-contenedor margen-derecho">
                         <div class="producto-contenedor-secundario">
                             <div class="producto-header">
-                                <div class="producto-descuento"><%= product.descuento%>
-                                </div>
-                                <div class="producto-favorito"><!--<i class="fas fa-heart">--><i class="far fa-heart"></i>
-                                </div>
+                                <div class="producto-descuento"><%= product.discount%></div>
+                                <div class="producto-favorito"><!--<i class="fas fa-heart">--><i class="far fa-heart"></i></div>
                             </div>
                             <div class="producto-imagen">
-                                <img src= <%= product.imagen%> >
+                                <img src= <%= product.image%>.png >
                             </div>
                             <div class="producto-footer">
                                 <div class="producto-titulo">
-                                    <p class="producto-detalle"> <%= product.nombre%>
-                                    <span class="producto-presentacion"> x <%= product.presentacion%></span>
+                                    <p class="producto-detalle"> <%= product.description%>
+                                    <span class="producto-presentacion"> x <%= product.display%></span>
                                     </p>
                                 </div>
                                 <div class="producto-precios">
-                                    <span class="precio-nuestro"> <%= product.precio%>
-                                    <span class="precio-competencia"> <%= product.precioCompetencia%> </span>
+                                    <span class="precio-nuestro"> <%= product.price%>
+                                    <span class="precio-competencia"> <%= product.price%> </span><!-- Cambiar a descuento -->
                                     </span>
                                 </div>
-                                <div class="boton-agregar">Agregar</div>
+                                <button onclick="addItem(<%= product.id%>)" class="boton-agregar">Agregar</button >
                             </div>
                         </div>
                     </div>
