API agregar quitar cantidad + fix bugs

--- a/site/src/views/partials/head.ejs
+++ b/site/src/views/partials/head.ejs
@@ -14,5 +14,6 @@
     <link rel="stylesheet" type="text/css" href="/styles/home_new.css">
     <link rel="stylesheet" type="text/css" href="/styles/icons.css">
     <link rel="stylesheet" type="text/css" href="/styles/new_css_otros.css">
+    <script type="text/javascript" src="/js/cart.js"></script>
     <script src="/js/icons.js"></script>
 </head>
