--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -38,7 +38,10 @@
                                     <span class="precio-competencia"> <%= product.price%> </span><!-- Cambiar a descuento -->
                                     </span>
                                 </div>
-                                <button onclick="addItem(<%= product.id%>)" class="boton-agregar">Agregar</button >
+                                <button onclick="addSubtractRemoveQuantity(<%= product.id%>,'subtract')" class="boton-sumarrestar">-</button >
+                                <span id="quantitySku=<%= product.id%>">0</span>
+                                <button onclick="addSubtractRemoveQuantity(<%= product.id%>,'add')" class="boton-sumarrestar">+</button >
+                                <button onclick="addSubtractRemoveQuantity(<%= product.id%>,'create')" class="boton-agregar">Agregar</button >
                             </div>
                         </div>
                     </div>
