--- a/site/src/views/partials/head.ejs
+++ b/site/src/views/partials/head.ejs
@@ -15,5 +15,6 @@
     <link rel="stylesheet" type="text/css" href="/styles/icons.css">
     <link rel="stylesheet" type="text/css" href="/styles/new_css_otros.css">
     <script type="text/javascript" src="/js/cart.js"></script>
-    <script src="/js/icons.js"></script>
+    <script type="text/javascript" src="/js/icons.js"></script>
+    <script type="text/javascript" src="/js/script.js"></script>
 </head>
