--- a/site/src/views/products/productCart.ejs
+++ b/site/src/views/products/productCart.ejs
@@ -53,7 +53,7 @@
                     <p>$272,00</p>
                 </div>
                 <div class="ahorro-total">
-                    <p>En esta compra ahorraste: $60</p>
+                    <p>En esta compra ahorraste: <%= totalDiscount %></p>
                 </div>
             </div>
         </div>
